--- a/index.html
+++ b/index.html
@@ -1,43 +1,26 @@
-
 <!DOCTYPE html>
-<html>
+<html lang="pl">
 <head>
-  <title>ExploMapa</title>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link
-    rel="stylesheet"
-    href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
-    integrity="sha256-sA+e2myLs9xVM7zvibIOtKpFQdlES9y6WGHGZ6bYwYQ="
-    crossorigin=""
-  />
+  <meta charset="UTF-8">
+  <title>ExploRide – Mapa</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
   <style>
-    html, body, #map {
-      height: 100%;
-      margin: 0;
-      padding: 0;
-    }
+    html, body { margin: 0; padding: 0; height: 100%; }
+    #map { width: 100%; height: 100vh; }
   </style>
 </head>
 <body>
   <div id="map"></div>
-  <script
-    src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
-    integrity="sha256-SmSRNwBv+3UyjD7C0Un1zdC7UFQZ1RQE06L4D0pZ4hE="
-    crossorigin=""
-  ></script>
+
+  <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
   <script>
-    const map = L.map('map').setView([52.2297, 21.0122], 10); // Warszawa
+    const map = L.map('map').setView([50.2649, 19.0238], 6); // Polska środek
 
-    L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-      maxZoom: 19,
-      attribution: '&copy; OpenStreetMap contributors'
+    // Esri satelita
+    L.tileLayer('https://server.arcgisonline.com/ArcGIS/rest/services/World_Imagery/MapServer/tile/{z}/{y}/{x}', {
+      attribution: 'Map data © <a href="https://www.esri.com/">Esri</a>'
     }).addTo(map);
-
-    L.marker([52.2297, 21.0122])
-      .addTo(map)
-      .bindPopup('Warszawa')
-      .openPopup();
   </script>
 </body>
 </html>
