--- a/index.html
+++ b/index.html
@@ -42,5 +42,6 @@
   // Lista warstw do przełączania
   L.control.layers(null, warstwy).addTo(map);
 </script>
+  <script src="dane.js"></script>
 </body>
 </html>
