--- a/index.html
+++ b/index.html
@@ -15,15 +15,12 @@
 
   <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
   <script>
-    const map = L.map('map').setView([50.2649, 19.0238], 6);
-    
-    // Satelita
+    const map = L.map('map').setView([52.1, 20.9], 7); // środek Polski
     L.tileLayer('https://server.arcgisonline.com/ArcGIS/rest/services/World_Imagery/MapServer/tile/{z}/{y}/{x}', {
       attribution: 'Map data © <a href="https://www.esri.com/">Esri</a>'
     }).addTo(map);
   </script>
 
-  <!-- Dodajemy prawdziwe pinezki z pliku -->
   <script src="dane.js"></script>
 </body>
 </html>
