--- a/index.html
+++ b/index.html
@@ -2,9 +2,20 @@
 <html lang="pl">
 <head>
   <meta charset="UTF-8">
-  <title>ExploRide • Mapa</title>
+  <title>ExploRide • Mapa (Clustering)</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
+  <link
+    rel="stylesheet"
+    href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
+  />
+  <link
+    rel="stylesheet"
+    href="https://unpkg.com/leaflet.markercluster@1.5.3/dist/MarkerCluster.css"
+  />
+  <link
+    rel="stylesheet"
+    href="https://unpkg.com/leaflet.markercluster@1.5.3/dist/MarkerCluster.Default.css"
+  />
   <style>
     html, body { margin: 0; padding: 0; height: 100%; }
     #map { width: 100%; height: 100vh; }
@@ -14,13 +25,15 @@
   <div id="map"></div>
 
   <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
+  <script src="https://unpkg.com/leaflet.markercluster@1.5.3/dist/leaflet.markercluster.js"></script>
+
   <script>
-    const map = L.map('map').setView([52.1, 20.9], 7); // środek Polski
+    const map = L.map('map').setView([52.1, 20.9], 7);
     L.tileLayer('https://server.arcgisonline.com/ArcGIS/rest/services/World_Imagery/MapServer/tile/{z}/{y}/{x}', {
       attribution: 'Map data © <a href="https://www.esri.com/">Esri</a>'
     }).addTo(map);
   </script>
 
-  <script src="dane.js"></script>
+  <script src="dane_cluster.js"></script>
 </body>
 </html>
