--- a/index.html
+++ b/index.html
@@ -2,38 +2,57 @@
 <html lang="pl">
 <head>
   <meta charset="UTF-8">
-  <title>ExploRide • Mapa (Clustering)</title>
+  <title>ExploRide • Mapa z listą</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link
-    rel="stylesheet"
-    href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
-  />
-  <link
-    rel="stylesheet"
-    href="https://unpkg.com/leaflet.markercluster@1.5.3/dist/MarkerCluster.css"
-  />
-  <link
-    rel="stylesheet"
-    href="https://unpkg.com/leaflet.markercluster@1.5.3/dist/MarkerCluster.Default.css"
-  />
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
   <style>
-    html, body { margin: 0; padding: 0; height: 100%; }
-    #map { width: 100%; height: 100vh; }
+    html, body { margin: 0; padding: 0; height: 100%; font-family: sans-serif; }
+    #map { position: absolute; top: 0; left: 300px; right: 0; bottom: 0; }
+    #sidebar {
+      position: absolute;
+      top: 0;
+      left: 0;
+      bottom: 0;
+      width: 300px;
+      background: #f8f8f8;
+      overflow-y: auto;
+      border-right: 1px solid #ccc;
+      padding: 10px;
+    }
+    .warstwa {
+      margin-bottom: 10px;
+    }
+    .warstwa h3 {
+      margin: 5px 0;
+      font-size: 16px;
+      border-bottom: 1px solid #ccc;
+      padding-bottom: 3px;
+      cursor: pointer;
+    }
+    .pinezka {
+      padding-left: 10px;
+      font-size: 14px;
+      margin: 2px 0;
+      cursor: pointer;
+      color: #007bff;
+    }
+    .pinezka:hover {
+      text-decoration: underline;
+    }
   </style>
 </head>
 <body>
+  <div id="sidebar"></div>
   <div id="map"></div>
 
   <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
-  <script src="https://unpkg.com/leaflet.markercluster@1.5.3/dist/leaflet.markercluster.js"></script>
-
   <script>
     const map = L.map('map').setView([52.1, 20.9], 7);
     L.tileLayer('https://server.arcgisonline.com/ArcGIS/rest/services/World_Imagery/MapServer/tile/{z}/{y}/{x}', {
-      attribution: 'Map data © <a href="https://www.esri.com/">Esri</a>'
+      attribution: 'Map data © Esri'
     }).addTo(map);
   </script>
 
-  <script src="dane_cluster.js"></script>
+  <script src="dane.js"></script>
 </body>
 </html>
