--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
       margin-bottom: 10px;
     }
     .warstwa h3 {
+      justify-content: space-between;
+
       margin: 5px 0;
       font-size: 16px;
       display: flex;
