--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
     }
     .warstwa h3 {
       justify-content: space-between;
-
       margin: 5px 0;
       font-size: 16px;
       display: flex;
@@ -57,6 +56,7 @@
     }).addTo(map);
   </script>
 
-  <script src="dane.js"></script>
+  <!-- KLUCZOWA ZMIANA: defer -->
+  <script src="dane.js" defer></script>
 </body>
 </html>
