--- a/index.html
+++ b/index.html
@@ -111,5 +111,8 @@ roads.addTo(map);
   </script>
 
   <script src="dane.js"></script>
+  <script>
+  L.control.layers(null, warstwy).addTo(map);
+</script>
 </body>
 </html>
