--- a/index.html
+++ b/index.html
@@ -59,7 +59,14 @@
   </style>
 </head>
 <body>
-  <div id="sidebar"></div>
+  <div id="sidebar">
+  <input
+    type="text"
+    id="wyszukiwarka"
+    placeholder="Szukaj pinezki..."
+    style="width: 100%; padding: 6px; margin-bottom: 10px; font-size: 14px;"
+  >
+</div>
   <div id="map"></div>
   <div id="basemap-switcher">
     <h3>Rodzaj mapy</h3>
