pasek fix czy nie

--- a/index.html
+++ b/index.html
@@ -59,13 +59,14 @@
   </style>
 </head>
 <body>
-  <div id="sidebar">
+ <div id="sidebar">
   <input
     type="text"
     id="wyszukiwarka"
     placeholder="Szukaj pinezki..."
     style="width: 100%; padding: 6px; margin-bottom: 10px; font-size: 14px;"
   >
+  <div id="lista-warstw"></div>
 </div>
   <div id="map"></div>
   <div id="basemap-switcher">
