--- a/index.html
+++ b/index.html
@@ -7,10 +7,8 @@
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
   <style>
     html, body { margin: 0; padding: 0; height: 100%; font-family: sans-serif; }
-
-    #map, #sidebar, #basemap-switcher { display: none; }
-    #map { position: absolute; top: 0; left: 300px; right: 250px; bottom: 0; }
-
+    #map, #sidebar { display: none; }
+    #map { position: absolute; top: 0; left: 300px; right: 0; bottom: 0; }
     #sidebar {
       position: absolute;
       top: 0;
@@ -22,107 +20,51 @@
       border-right: 1px solid #ccc;
       padding: 10px;
     }
-
-    #basemap-switcher {
-      position: absolute;
-      top: 0;
-      right: 0;
-      width: 250px;
-      height: 100%;
-      background: #f8f8f8;
-      border-left: 1px solid #ccc;
-      padding: 10px;
-      overflow-y: auto;
-    }
-
     .pinezka { margin: 5px 0; cursor: pointer; color: #007bff; }
     .pinezka:hover { text-decoration: underline; }
     .warstwa { margin-bottom: 10px; }
     .warstwa h3 { margin: 5px 0; font-size: 16px; display: flex; justify-content: space-between; align-items: center; }
     .pinezki-lista { margin-left: 10px; }
-
     #ekran-logowania {
-      position: absolute;
+      position: fixed;
       top: 0; left: 0; right: 0; bottom: 0;
       background: white;
-      z-index: 9999;
       display: flex;
-      align-items: center;
       justify-content: center;
+      align-items: center;
     }
     #loginBtn {
       font-size: 18px;
-      padding: 12px 24px;
+      padding: 10px 20px;
+      background: #007bff;
+      color: white;
+      border: none;
+      border-radius: 5px;
       cursor: pointer;
-    }
-    .leaflet-tile.hillshade-dark {
-      filter: grayscale(100%) brightness(60%);
     }
   </style>
 </head>
 <body>
-  <div id="ekran-logowania">
-    <button id="loginBtn">Zaloguj się przez Google</button>
-  </div>
-
-  <div id="sidebar">
-    <div id="lista-warstw"></div>
-  </div>
+  <div id="ekran-logowania"><button id="loginBtn">Zaloguj się przez Google</button></div>
+  <div id="sidebar"><div id="lista-warstw"></div></div>
   <div id="map"></div>
-  <div id="basemap-switcher">
-    <h3>Rodzaj mapy</h3>
-    <label><input type="radio" name="basemap" value="sat" checked> Satelitarna + miasta + drogi</label><br>
-    <label><input type="radio" name="basemap" value="hill"> Cieniowanie + miasta + drogi</label>
-  </div>
 
   <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-auth-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-firestore-compat.js"></script>
-  <script src="firebase-init.js"></script>
   <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
 
   <script>
-    const map = L.map('map').setView([52.1, 20.9], 7);
-
-    const sat = L.tileLayer('https://server.arcgisonline.com/ArcGIS/rest/services/World_Imagery/MapServer/tile/{z}/{y}/{x}', {
-      attribution: 'Zdjęcia: Esri'
-    });
-
-    const hill = L.tileLayer('https://server.arcgisonline.com/ArcGIS/rest/services/Elevation/World_Hillshade/MapServer/tile/{z}/{y}/{x}', {
-      attribution: 'Cieniowanie: Esri',
-      className: 'hillshade-dark'
-    });
-
-    const labels = L.tileLayer('https://server.arcgisonline.com/ArcGIS/rest/services/Reference/World_Boundaries_and_Places/MapServer/tile/{z}/{y}/{x}', {
-      attribution: 'Nazwy: Esri',
-      opacity: 0.8
-    });
-
-    const roads = L.tileLayer('https://server.arcgisonline.com/ArcGIS/rest/services/Reference/World_Transportation/MapServer/tile/{z}/{y}/{x}', {
-      attribution: 'Drogi: Esri',
-      opacity: 0.5
-    });
-
-    let baseLayer = sat;
-    baseLayer.addTo(map);
-    labels.addTo(map);
-    roads.addTo(map);
-
-    document.querySelectorAll('input[name="basemap"]').forEach(radio => {
-      radio.addEventListener('change', () => {
-        map.removeLayer(baseLayer);
-        baseLayer = (radio.value === 'sat') ? sat : hill;
-        baseLayer.addTo(map);
-
-        map.removeLayer(labels);
-        map.removeLayer(roads);
-        labels.addTo(map);
-        roads.addTo(map);
-      });
-    });
-
-    const warstwy = {};
-    const markers = [];
+    const firebaseConfig = {
+      apiKey: "AIzaSyBj8xPy81NaxFwHmBL3ni_UVjYKFZflyv0",
+      authDomain: "exploridemap.firebaseapp.com",
+      projectId: "exploridemap",
+      storageBucket: "exploridemap.firebasestorage.app",
+      messagingSenderId: "1074659589759",
+      appId: "1:1074659589759:web:f8bdffc15d41d47ac8094a"
+    };
+    firebase.initializeApp(firebaseConfig);
+    const db = firebase.firestore();
 
     document.getElementById("loginBtn").addEventListener("click", () => {
       const provider = new firebase.auth.GoogleAuthProvider();
@@ -132,63 +74,116 @@
     firebase.auth().onAuthStateChanged(user => {
       if (!user) return;
       if (user.email !== "eksplorajder@gmail.com") {
-        alert("Brak dostępu. Zaloguj się jako eksplorajder@gmail.com");
+        alert("Brak dostępu.");
         return;
       }
-
       document.getElementById("ekran-logowania").style.display = "none";
       document.getElementById("map").style.display = "block";
       document.getElementById("sidebar").style.display = "block";
-      document.getElementById("basemap-switcher").style.display = "block";
-      zaladujPinezki();
+      initMap();
+      zaladujPinezkiZFirestore();
     });
 
-    function dodajEmoji(nazwa) {
-      const n = nazwa.toLowerCase();
-      if (n.includes("dom") || n.includes("chata")) return "🏚️ " + nazwa;
-      return nazwa;
+    let map;
+    const warstwy = {};
+
+    function initMap() {
+      map = L.map('map').setView([52.1, 20.9], 7);
+      L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+        attribution: '&copy; OpenStreetMap'
+      }).addTo(map);
     }
 
-    function zaladujPinezki() {
+    function zaladujPinezkiZFirestore() {
       db.collection("pinezki").get().then(snapshot => {
         snapshot.forEach(doc => {
-          const data = doc.data();
-          const warstwa = data.warstwa || "Inne";
-          if (!warstwy[warstwa]) {
-            warstwy[warstwa] = { pinezki: [], layer: L.layerGroup().addTo(map) };
+          const p = doc.data();
+          const id = doc.id;
+
+          if (!warstwy[p.warstwa]) {
+            warstwy[p.warstwa] = {
+              lista: [],
+              layer: L.layerGroup().addTo(map)
+            };
           }
 
-          const marker = L.marker([data.lat, data.lng]).addTo(warstwy[warstwa].layer);
-          marker.bindPopup(`<b>${data.nazwa}</b><br>${data.opis}`);
-          data.marker = marker;
-          warstwy[warstwa].pinezki.push(data);
-          markers.push(marker);
+          const marker = L.marker([p.lat, p.lng]).addTo(warstwy[p.warstwa].layer);
+          marker.bindPopup(stworzPopup(p, id, marker));
+          p.marker = marker;
+          warstwy[p.warstwa].lista.push(p);
         });
-        generujListe();
+        generujListeWarstw();
       });
     }
 
-    function generujListe() {
+    function stworzPopup(p, id, marker) {
+      const div = document.createElement("div");
+      div.innerHTML = `
+        <b>${p.nazwa}</b><br>${p.opis}<br>
+        <a href="https://maps.google.com/?q=${p.lat},${p.lng}" target="_blank">📍 Google Maps</a><br><br>
+        <button onclick="edytuj('${id}', ${p.lat}, ${p.lng})">✏️ Edytuj</button>
+      `;
+      return div;
+    }
+
+    function edytuj(id, lat, lng) {
+      db.collection("pinezki").doc(id).get().then(doc => {
+        const p = doc.data();
+        const container = document.createElement("div");
+        container.innerHTML = `
+          <input id="enazwa" value="${p.nazwa}" style="width: 100%"><br>
+          <textarea id="eopis" style="width: 100%">${p.opis}</textarea><br>
+          <input id="ewarstwa" value="${p.warstwa}" style="width: 100%"><br>
+          <button onclick="zapisz('${id}')">💾 Zapisz</button>
+          <button onclick="location.reload()">Anuluj</button>
+        `;
+        const marker = findMarkerByLatLng(lat, lng);
+        if (marker) marker.bindPopup(container).openPopup();
+      });
+    }
+
+    function zapisz(id) {
+      const nowa = {
+        nazwa: document.getElementById("enazwa").value,
+        opis: document.getElementById("eopis").value,
+        warstwa: document.getElementById("ewarstwa").value
+      };
+      db.collection("pinezki").doc(id).update(nowa).then(() => location.reload());
+    }
+
+    function findMarkerByLatLng(lat, lng) {
+      for (const layer of Object.values(map._layers)) {
+        if (layer.getLatLng && layer.getLatLng().lat === lat && layer.getLatLng().lng === lng) {
+          return layer;
+        }
+      }
+      return null;
+    }
+
+    function generujListeWarstw() {
       const lista = document.getElementById("lista-warstw");
       lista.innerHTML = "";
       for (const nazwa in warstwy) {
         const div = document.createElement("div");
         div.className = "warstwa";
         const h3 = document.createElement("h3");
-        h3.innerText = `${nazwa} (${warstwy[nazwa].pinezki.length})`;
+        h3.innerText = `${nazwa} (${warstwy[nazwa].lista.length})`;
         div.appendChild(h3);
+
         const listaP = document.createElement("div");
         listaP.className = "pinezki-lista";
-        warstwy[nazwa].pinezki.forEach(p => {
+
+        warstwy[nazwa].lista.forEach(p => {
           const el = document.createElement("div");
           el.className = "pinezka";
-          el.textContent = dodajEmoji(p.nazwa);
+          el.textContent = p.nazwa;
           el.onclick = () => {
             map.setView([p.lat, p.lng], 16);
             p.marker.openPopup();
           };
           listaP.appendChild(el);
         });
+
         div.appendChild(listaP);
         lista.appendChild(div);
       }
