--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="pl">
 <head>
@@ -76,171 +77,7 @@
   <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-firestore-compat.js"></script>
   <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
 
-  <script>
-    const firebaseConfig = {
-      apiKey: "AIzaSyBj8xPy81NaxFwHmBL3ni_UVjYKFZflyv0",
-      authDomain: "exploridemap.firebaseapp.com",
-      projectId: "exploridemap",
-      storageBucket: "exploridemap.firebasestorage.app",
-      messagingSenderId: "1074659589759",
-      appId: "1:1074659589759:web:f8bdffc15d41d47ac8094a"
-    };
-    firebase.initializeApp(firebaseConfig);
-    const db = firebase.firestore();
-
-    document.getElementById("loginBtn").addEventListener("click", () => {
-      const provider = new firebase.auth.GoogleAuthProvider();
-      firebase.auth().signInWithPopup(provider);
-    });
-
-    firebase.auth().onAuthStateChanged(user => {
-      if (!user) return;
-      if (user.email !== "eksplorajder@gmail.com") {
-        alert("Brak dostępu.");
-        return;
-      }
-      document.getElementById("ekran-logowania").style.display = "none";
-      document.getElementById("map").style.display = "block";
-      document.getElementById("sidebar").style.display = "block";
-      document.getElementById("basemap-switcher").style.display = "block";
-      initMap();
-      zaladujPinezkiZFirestore();
-    });
-
-    let map, baseLayer;
-    const warstwy = {};
-    let wszystkiePinezki = [];
-
-    function initMap() {
-      map = L.map('map').setView([52.1, 20.9], 7);
-
-      const sat = L.tileLayer('https://server.arcgisonline.com/ArcGIS/rest/services/World_Imagery/MapServer/tile/{z}/{y}/{x}', {
-        attribution: 'Esri'
-      });
-      const hill = L.tileLayer('https://server.arcgisonline.com/ArcGIS/rest/services/Elevation/World_Hillshade/MapServer/tile/{z}/{y}/{x}', {
-        attribution: 'Esri',
-        className: 'hillshade-dark'
-      });
-      const labels = L.tileLayer('https://server.arcgisonline.com/ArcGIS/rest/services/Reference/World_Boundaries_and_Places/MapServer/tile/{z}/{y}/{x}');
-      const roads = L.tileLayer('https://server.arcgisonline.com/ArcGIS/rest/services/Reference/World_Transportation/MapServer/tile/{z}/{y}/{x}');
-
-      baseLayer = sat;
-      baseLayer.addTo(map);
-      labels.addTo(map);
-      roads.addTo(map);
-
-      document.querySelectorAll('input[name="basemap"]').forEach(radio => {
-        radio.addEventListener('change', () => {
-          map.removeLayer(baseLayer);
-          baseLayer = (radio.value === 'sat') ? sat : hill;
-          baseLayer.addTo(map);
-          map.removeLayer(labels); map.removeLayer(roads);
-          labels.addTo(map); roads.addTo(map);
-        });
-      });
-    }
-
-    function zaladujPinezkiZFirestore() {
-      db.collection("pinezki").get().then(snapshot => {
-        snapshot.forEach(doc => {
-          const p = doc.data();
-          const id = doc.id;
-          const warstwaNazwa = p.warstwa || "Inne";
-      if (!warstwy[warstwaNazwa]) {
-            warstwy[warstwaNazwa] = {
-              lista: [],
-              layer: L.layerGroup().addTo(map)
-            };
-          }
-          const marker = L.marker([p.lat, p.lng]).addTo(warstwy[warstwaNazwa].layer);
-          marker.bindPopup(`<b>${p.nazwa}</b><br>${p.opis}<br><a href="https://maps.google.com/?q=${p.lat},${p.lng}" target="_blank">📍 Google Maps</a><br><br><button onclick="edytuj('${id}', ${p.lat}, ${p.lng})">✏️ Edytuj</button>`);
-          p.marker = marker;
-          p.id = id;
-          warstwy[warstwaNazwa].lista.push(p);
-          wszystkiePinezki.push(p);
-        });
-        generujListeWarstw();
-      });
-    }
-
-    function edytuj(id, lat, lng) {
-      db.collection("pinezki").doc(id).get().then(doc => {
-        const p = doc.data();
-        const container = document.createElement("div");
-        container.innerHTML = `
-          <input id="enazwa" value="${p.nazwa}" style="width: 100%"><br>
-          <textarea id="eopis" style="width: 100%">${p.opis}</textarea><br>
-          <input id="ewarstwa" value="${p.warstwa}" style="width: 100%"><br>
-          <button onclick="zapisz('${id}')">💾 Zapisz</button>
-          <button onclick="location.reload()">Anuluj</button>
-        `;
-        const marker = findMarkerByLatLng(lat, lng);
-        if (marker) marker.bindPopup(container).openPopup();
-      });
-    }
-
-    function zapisz(id) {
-      const nowa = {
-        nazwa: document.getElementById("enazwa").value,
-        opis: document.getElementById("eopis").value,
-        warstwa: document.getElementById("ewarstwa").value
-      };
-      db.collection("pinezki").doc(id).update(nowa).then(() => location.reload());
-    }
-
-    function findMarkerByLatLng(lat, lng) {
-      for (const layer of Object.values(map._layers)) {
-        if (layer.getLatLng && layer.getLatLng().lat === lat && layer.getLatLng().lng === lng) {
-          return layer;
-        }
-      }
-      return null;
-    }
-
-    function generujListeWarstw() {
-      const lista = document.getElementById("lista-warstw");
-      lista.innerHTML = "";
-      for (const nazwa in warstwy) {
-        const div = document.createElement("div");
-        div.className = "warstwa";
-        const h3 = document.createElement("h3");
-        const toggleBtn = document.createElement("span");
-        toggleBtn.textContent = "🔽";
-        toggleBtn.style.cursor = "pointer";
-        h3.innerHTML = `${nazwa} (${warstwy[nazwa].lista.length})`;
-        h3.appendChild(toggleBtn);
-        div.appendChild(h3);
-
-        const listaP = document.createElement("div");
-        listaP.className = "pinezki-lista";
-
-        warstwy[nazwa].lista.forEach(p => {
-          const el = document.createElement("div");
-          el.className = "pinezka";
-          el.textContent = p.nazwa;
-          el.onclick = () => {
-            map.setView([p.lat, p.lng], 16);
-            p.marker.openPopup();
-          };
-          listaP.appendChild(el);
-        });
-
-        toggleBtn.onclick = () => {
-          listaP.classList.toggle("ukryta");
-          toggleBtn.textContent = listaP.classList.contains("ukryta") ? "▶️" : "🔽";
-        };
-
-        div.appendChild(listaP);
-        lista.appendChild(div);
-      }
-
-      document.getElementById("wyszukiwarka").addEventListener("input", e => {
-        const q = e.target.value.toLowerCase();
-        document.querySelectorAll(".pinezka").forEach(el => {
-          el.style.display = el.textContent.toLowerCase().includes(q) ? "block" : "none";
-        });
-      });
-    }
-  </script>
+  <script src="firebase-init.js"></script>
+  <script src="dane.js"></script>
 </body>
 </html>
