Handle Firestore loading errors

--- a/index.html
+++ b/index.html
@@ -160,6 +160,10 @@
           wszystkiePinezki.push(p);
         });
         generujListeWarstw();
+      })
+      .catch(err => {
+        console.error("Błąd pobierania pinezek:", err);
+        generujListeWarstw();
       });
     }
 
